--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.generate-unique-name=false
 spring.satasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=h2
 spring.datasource.password=h2
+spring.mvc.view.suffix=.html
